--- a/src/main/resources/templates/dashboard/main.html
+++ b/src/main/resources/templates/dashboard/main.html
@@ -265,9 +265,7 @@
 
 <!-- Icons -->
 <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-<script>
-      feather.replace()
-    </script>
+<script>feather.replace()</script>
 
 <!-- Graphs -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
